[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Images/Backgrounds/Forest.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Profiles/Enemies/MonstersAvatarIcons_61.PNG" type="Texture" id=2]
[ext_resource path="res://TheWildBreathOfZelda.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/UI/DefaultTheme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Images/Profiles/Friendlies/Tex_AnimeAva_17.png" type="Texture" id=5]
[ext_resource path="res://BattleScenes/CharacterPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Images/Profiles/Image Border.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Profiles/Friendlies/Tex_AnimeAva_01.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/Profiles/Friendlies/Tex_AnimeAva_51.png" type="Texture" id=9]
[ext_resource path="res://BattleScenes/Battle.gd" type="Script" id=10]
[ext_resource path="res://Assets/Images/Icons/Attacks/Sword Attack.PNG" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Profiles/blood-splatter.png" type="Texture" id=12]
















[sub_resource type="DynamicFont" id=2]
size = 56
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 3 )

[node name="Battle" type="Control"]
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopScreen" type="Control" parent="."]
margin_right = 720.0
margin_bottom = 706.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="TopScreen"]
margin_right = 720.0
margin_bottom = 706.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreaTitle" type="Control" parent="TopScreen"]
margin_right = 720.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseLine" type="Line2D" parent="TopScreen/AreaTitle"]
position = Vector2( 10, 10 )
points = PoolVector2Array( -10, 51, 710, 51 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="Name" type="Label" parent="TopScreen/AreaTitle"]
margin_right = 720.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
text = "Wild Forest"
align = 1
valign = 2
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayArea" type="MarginContainer" parent="TopScreen"]
margin_left = 10.0
margin_top = 72.0
margin_right = 710.0
margin_bottom = 696.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleBoard" type="GridContainer" parent="TopScreen/DisplayArea"]
margin_right = 700.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 10
columns = 2

[node name="AllFriendlies" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard"]
margin_right = 345.0
margin_bottom = 439.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/vseparation = 20
custom_constants/hseparation = 57
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendlyTL" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies" instance=ExtResource( 6 )]

[node name="FriendlyTR" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies"]
margin_left = 201.0
margin_right = 345.0
margin_bottom = 212.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyTR"]
margin_right = 144.0
margin_bottom = 207.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyTR/VBox"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pic" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyTR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PicBorder" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyTR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blood" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyTR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyTR/VBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 4 )
text = "Joseph
The Engi"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendlyBL" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies"]
margin_top = 232.0
margin_right = 144.0
margin_bottom = 439.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBL"]
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBL/VBox"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pic" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBL/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PicBorder" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBL/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blood" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBL/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBL/VBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 4 )
text = "Elaria"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendlyBR" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies"]
margin_left = 201.0
margin_top = 232.0
margin_right = 345.0
margin_bottom = 439.0
size_flags_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBR"]
margin_right = 144.0
margin_bottom = 207.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBR/VBox"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pic" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PicBorder" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blood" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TopScreen/DisplayArea/BattleBoard/AllFriendlies/FriendlyBR/VBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 4 )
text = "Victoria
Walker"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AllEnemies" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard"]
margin_left = 355.0
margin_right = 700.0
margin_bottom = 568.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 20
custom_constants/hseparation = 57
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyTL" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies"]
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTL"]
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTL/VBox"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pic" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTL/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PicBorder" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTL/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blood" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTL/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTL/VBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 4 )
text = "Grand Wolf"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyTR" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies"]
margin_left = 201.0
margin_right = 345.0
margin_bottom = 176.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTR"]
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTR/VBox"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pic" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PicBorder" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blood" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyTR/VBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 4 )
text = "Grand Wolf"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyML" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies"]
margin_top = 196.0
margin_right = 144.0
margin_bottom = 372.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyML"]
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyML/VBox"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pic" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyML/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PicBorder" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyML/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blood" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyML/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyML/VBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 4 )
text = "Grand Wolf"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyMR" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies"]
margin_left = 201.0
margin_top = 196.0
margin_right = 345.0
margin_bottom = 372.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyMR"]
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyMR/VBox"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pic" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyMR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PicBorder" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyMR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blood" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyMR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyMR/VBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 4 )
text = "Grand Wolf"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyBL" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies"]
margin_top = 392.0
margin_right = 144.0
margin_bottom = 568.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBL"]
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBL/VBox"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pic" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBL/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PicBorder" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBL/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blood" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBL/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBL/VBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "Grand Wolf"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyBR" type="GridContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies"]
margin_left = 201.0
margin_top = 392.0
margin_right = 345.0
margin_bottom = 568.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBR"]
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBR/VBox"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pic" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PicBorder" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blood" type="TextureRect" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBR/VBox/Control"]
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="TopScreen/DisplayArea/BattleBoard/AllEnemies/EnemyBR/VBox"]
margin_top = 148.0
margin_right = 144.0
margin_bottom = 176.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "Grand Wolf"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MidLine" type="Line2D" parent="TopScreen/DisplayArea/BattleBoard"]
points = PoolVector2Array( 350, -10, 350, 634 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="AttackList" type="ScrollContainer" parent="TopScreen/DisplayArea"]
visible = false
margin_right = 700.0
margin_bottom = 624.0
scroll_horizontal_enabled = false

[node name="Items" type="VBoxContainer" parent="TopScreen/DisplayArea/AttackList"]
margin_right = 700.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Item" type="HBoxContainer" parent="TopScreen/DisplayArea/AttackList/Items"]
margin_right = 700.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Picture" type="TextureRect" parent="TopScreen/DisplayArea/AttackList/Items/Item"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="TopScreen/DisplayArea/AttackList/Items/Item"]
margin_left = 104.0
margin_right = 621.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Attack name:
HP damage:
AP Cost:
"
valign = 1

[node name="Use" type="Button" parent="TopScreen/DisplayArea/AttackList/Items/Item"]
margin_left = 625.0
margin_top = 25.0
margin_right = 700.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 50 )
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "USE"

[node name="Controls" type="Control" parent="."]
margin_top = 706.0
margin_right = 720.0
margin_bottom = 911.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Controls"]
margin_left = 5.0
margin_top = 5.0
margin_right = 715.0
margin_bottom = 205.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerButtons" type="GridContainer" parent="Controls/MarginContainer"]
margin_right = 710.0
margin_bottom = 200.0
size_flags_stretch_ratio = 0.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Button" parent="Controls/MarginContainer/LowerButtons"]
margin_right = 350.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "ATTACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Button" parent="Controls/MarginContainer/LowerButtons"]
margin_left = 360.0
margin_right = 710.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "ITEMS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Abilities" type="Button" parent="Controls/MarginContainer/LowerButtons"]
margin_top = 105.0
margin_right = 350.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "ABILITIES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retreat" type="Button" parent="Controls/MarginContainer/LowerButtons"]
margin_left = 360.0
margin_top = 105.0
margin_right = 710.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "RETREAT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YMidLine" type="Line2D" parent="Controls"]
position = Vector2( 10, -778 )
points = PoolVector2Array( -10, 883.5, 710, 883.5 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="YBotLine" type="Line2D" parent="Controls"]
position = Vector2( 10, -674 )
points = PoolVector2Array( -10, 883.5, 710, 883.5 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="XLeftLine" type="Line2D" parent="Controls"]
position = Vector2( -350, -696 )
points = PoolVector2Array( 350, 696, 350, 903.5 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="XMidLine" type="Line2D" parent="Controls"]
position = Vector2( 10, -696 )
points = PoolVector2Array( 350, 696, 350, 903.5 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="XRightLine" type="Line2D" parent="Controls"]
position = Vector2( 370, -695 )
points = PoolVector2Array( 350, 696, 350, 903.5 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )

[node name="YTopLine" type="Line2D" parent="Controls"]
position = Vector2( 10, -696 )
points = PoolVector2Array( -10, 696, 710, 696 )
width = 5.0
default_color = Color( 0, 0, 0, 1 )
[connection signal="pressed" from="Controls/MarginContainer/LowerButtons/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Controls/MarginContainer/LowerButtons/Items" to="." method="_on_Items_pressed"]
[connection signal="pressed" from="Controls/MarginContainer/LowerButtons/Abilities" to="." method="_on_Abilities_pressed"]
[connection signal="pressed" from="Controls/MarginContainer/LowerButtons/Retreat" to="." method="_on_Retreat_pressed"]
